# amspp

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
amspp/: __init__.py  mmdataset.py
amspp/modals/: __init__.py
amspp/snntorch_datasets/: __init__.py  get_data.py
apidocs/: all-documents.html  amspp.mmdataset.MultiModalDataset.html  amspp.mmdataset.Schema.html  amspp.mmdataset.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  searchindex.json  undoccedSummary.html
docs/: amspp.drawio
tests/: audio.py  hw2snn.py  model.py
